Update Firebase configuration and enhance chat functionality
- Changed default Firebase project to "isk-chat-room".
- Updated hosting site in firebase.json to "isk-chat-room".
- Added Firestore integration in firebase.ts for database operations.
- Enhanced user management in chatUtils.ts with error handling and participant tracking.
- Improved message sending logic to include participants and error handling.
- Updated Chat component to ensure user is authenticated before sending messages.
- Refined login error handling in the Login component.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "site": "chat-isk",
+    "site": "isk-chat-room",
     "public": "dist",
     "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "rewrites": [
