feat: Implement Capacitor for native Android application
Sets up Capacitor integration to enable native Android builds (APK generation).

- Configuring capacitor.config.ts to use the Vite 'dist' output.
- Setting up the asset generation pipeline for app icons and splash screens.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@capacitor/android": "^7.4.2",
+    "@capacitor/core": "^7.4.2",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -25,6 +27,8 @@
     "workbox-precaching": "^7.3.0"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^7.4.2",
     "@eslint/js": "^9.30.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/react": "^19.1.8",
